--- a/hr_dashboard.html
+++ b/hr_dashboard.html
@@ -257,7 +257,6 @@
                                       <li><a href="hr_dashboard.html">Dashboard</a></li>
                                       <li><a href="hr_staff.html">Staff</a></li>
                                       <li><a href="hr_leave.html">Staff Attendance</a></li>
-                                      <li><a href="hr_holiday_template.html">Holiday Template</a></li>
                                       <li><a href="hr_settings.html">Settings</a></li>
                                   </ul>
                               </li>
@@ -392,7 +391,7 @@
                         </div>
                         <div class="card">
                           <div class="row ml-4">
-                            <h5 class="pl-4">Monthly Regular</h5>
+                            <h5 class="px-4 mt-2">Monthly Regular</h5>
                           </div>
                           <div class="card-body">
                             <table class="table table-bordered attendance-table">
@@ -421,7 +420,79 @@
                                   <td>-</td>
                                   <td>1P</td>
                                 </tr>
-                                <tr class="arrow" data-target="#calendar1">
+                                <tr id="calendar1" class="calendar">
+                                  <td colspan="10">
+                                    <table class="table mb-0">
+                                      <thead>
+                                        <tr>
+                                          <th>DAYS</th>
+                                          <th>M</th>
+                                          <th>T</th>
+                                          <th>W</th>
+                                          <th>T</th>
+                                          <th>F</th>
+                                          <th>S</th>
+                                          <th>S</th>
+                                          <th>M</th>
+                                          <th>T</th>
+                                          <th>W</th>
+                                          <th>T</th>
+                                          <th>F</th>
+                                          <th>S</th>
+                                          <th>S</th>
+                                          <th>M</th>
+                                          <th>T</th>
+                                          <th>W</th>
+                                          <th>T</th>
+                                          <th>F</th>
+                                          <th>S</th>
+                                          <th>S</th>
+                                          <th>M</th>
+                                          <th>T</th>
+                                          <th>W</th>
+                                          <th>T</th>
+                                          <th>F</th>
+                                          <th>S</th>
+                                          <th>S</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody>
+                                        <tr>
+                                          <td>WH</td>
+                                          <td>11:23</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>P</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>A</td>
+                                          <td>-</td>
+                                          <td>A</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                          <td>-</td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                                <tr class="arrow" data-target="#calendar2">
                                     <td><i class="fas fa-angle-down"></i></td>
                                     <td>Amit...</td>
                                     <td>6</td>
@@ -432,7 +503,79 @@
                                     <td>-</td>
                                     <td>6P</td>
                                   </tr>
-                                  <tr class="arrow" data-target="#calendar1">
+                                  <tr id="calendar2" class="calendar">
+                                    <td colspan="10">
+                                      <table class="table mb-0">
+                                        <thead>
+                                          <tr>
+                                            <th>DAYS</th>
+                                            <th>M</th>
+                                            <th>T</th>
+                                            <th>W</th>
+                                            <th>T</th>
+                                            <th>F</th>
+                                            <th>S</th>
+                                            <th>S</th>
+                                            <th>M</th>
+                                            <th>T</th>
+                                            <th>W</th>
+                                            <th>T</th>
+                                            <th>F</th>
+                                            <th>S</th>
+                                            <th>S</th>
+                                            <th>M</th>
+                                            <th>T</th>
+                                            <th>W</th>
+                                            <th>T</th>
+                                            <th>F</th>
+                                            <th>S</th>
+                                            <th>S</th>
+                                            <th>M</th>
+                                            <th>T</th>
+                                            <th>W</th>
+                                            <th>T</th>
+                                            <th>F</th>
+                                            <th>S</th>
+                                            <th>S</th>
+                                          </tr>
+                                        </thead>
+                                        <tbody>
+                                          <tr>
+                                            <td>WH</td>
+                                            <td>11:23</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>P</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>A</td>
+                                            <td>-</td>
+                                            <td>A</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                  <tr class="arrow" data-target="#calendar3">
                                     <td><i class="fas fa-angle-down"></i></td>
                                     <td>Vidhi...</td>
                                     <td>10</td>
@@ -443,7 +586,80 @@
                                     <td>-</td>
                                     <td>8P</td>
                                   </tr>
-                                  <tr class="arrow" data-target="#calendar1">
+                                
+                                  <tr id="calendar3" class="calendar">
+                                    <td colspan="10">
+                                      <table class="table mb-0">
+                                        <thead>
+                                          <tr>
+                                            <th>DAYS</th>
+                                            <th>M</th>
+                                            <th>T</th>
+                                            <th>W</th>
+                                            <th>T</th>
+                                            <th>F</th>
+                                            <th>S</th>
+                                            <th>S</th>
+                                            <th>M</th>
+                                            <th>T</th>
+                                            <th>W</th>
+                                            <th>T</th>
+                                            <th>F</th>
+                                            <th>S</th>
+                                            <th>S</th>
+                                            <th>M</th>
+                                            <th>T</th>
+                                            <th>W</th>
+                                            <th>T</th>
+                                            <th>F</th>
+                                            <th>S</th>
+                                            <th>S</th>
+                                            <th>M</th>
+                                            <th>T</th>
+                                            <th>W</th>
+                                            <th>T</th>
+                                            <th>F</th>
+                                            <th>S</th>
+                                            <th>S</th>
+                                          </tr>
+                                        </thead>
+                                        <tbody>
+                                          <tr>
+                                            <td>WH</td>
+                                            <td>11:23</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>P</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>A</td>
+                                            <td>-</td>
+                                            <td>A</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                            <td>-</td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                  <tr class="arrow" data-target="#calendar4">
                                     <td><i class="fas fa-angle-down"></i></td>
                                     <td>Riya...</td>
                                     <td>9</td>
@@ -454,7 +670,8 @@
                                     <td>-</td>
                                     <td>8P</td>
                                   </tr>
-                                <tr id="calendar1" class="calendar">
+                                
+                                <tr id="calendar4" class="calendar">
                                   <td colspan="10">
                                     <table class="table mb-0">
                                       <thead>
