--- a/hr_shift_edit.html
+++ b/hr_shift_edit.html
@@ -273,7 +273,6 @@
                                         <li><a href="hr_dashboard.html">Dashboard</a></li>
                                         <li><a href="hr_staff.html">Staff</a></li>
                                         <li><a href="hr_leave.html">Staff Attendance</a></li>
-                                        <li><a href="hr_holiday_template.html">Holiday Template</a></li>
                                         <li><a href="hr_settings.html">Settings</a></li>
                                     </ul>
                                 </li>
@@ -501,10 +500,8 @@
                             <div class="">
                                 <div class="d-flex align-items-center mb-2">
                                     <i data-feather="chevron-down" id="toggleDetails2" class="mb-2 text-primary"></i>
-                                  <!-- <span class="arrow-icon" id="toggleDetails1">&#9660;</span> -->
-                                  <label class="ml-2">Assigned Staff</label>
+                                  <label class="ml-2">Staff assigned to other shift</label>
                                 </div>
-                                <!-- <div id="details1" class="d-none">Section to be displayed</div> -->
                               </div>
                             <div id="details2" class="d-none">
                                 <div class="row mt-2">
