--- a/hr_addStaff.html
+++ b/hr_addStaff.html
@@ -22,31 +22,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Font Awesome-->
+    <!-- Font Awesome tried-->
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/font-awesome.css">
-    <!-- ico-font-->
+    <!-- ico-font  tried-->
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/icofont.css">
-    <!-- Themify icon-->
+    <!-- Themify icon tried-->
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
-    <!-- Flag icon-->
+    <!-- Flag icon tried-->
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/flag-icon.css">
-    <!-- Feather icon-->
+    <!-- Feather icon tried-->
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/feather-icon.css">
-    <!-- Plugins css start-->
+    <!-- Plugins css start tried-->
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/animate.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/chartist.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/prism.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/datatables.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/newCSS.css">
     <!-- Plugins css Ends-->
-    <!-- Bootstrap css-->
+    <!-- Bootstrap css tried-->
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
-    <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <!-- App css   causing problem-->
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
     <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/hr.css">
+    <!--new one added-->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <style>
         .attendance-container {
             padding: 20px;
@@ -264,7 +268,6 @@
                                         <li><a href="hr_dashboard.html">Dashboard</a></li>
                                         <li><a href="hr_staff.html">Staff</a></li>
                                         <li><a href="hr_leave.html">Staff Attendance</a></li>
-                                        <li><a href="hr_holiday_template.html">Holiday Template</a></li>
                                         <li><a href="hr_settings.html">Settings</a></li>
                                     </ul>
                                 </li>
@@ -440,17 +443,16 @@
                                                                                 name="salary_cycle" value="1">
                                                                         </div>
                                                                         <div class="col-sm-3 mb-3">
-                                                                            <label for="week_off"
-                                                                                class="form-label">Week Off</label>
-                                                                            <select class="form-select"
-                                                                                id="marital_status"
-                                                                                name="marital_status">
-                                                                                <option disabled selected>Select
-                                                                                    Week off
-                                                                                </option>
-                                                                                <option value="Married">Sunday
-                                                                                </option>
-                                                                            </select>
+                                                                                <label class="form-label">Week off</label>
+                                                                                <select class="form-select" id="week_off" name="week_off" multiple>
+                                                                                    <option value="Sunday">Sunday</option>
+                                                                                    <option value="Saturday">Saturday</option>
+                                                                                    <option value="Friday">Friday</option>
+                                                                                    <option value="Thursday">Thursday</option>
+                                                                                    <option value="Wednesday">Wednesday</option>
+                                                                                    <option value="Tuesday">Tuesday</option>
+                                                                                    <option value="Monday">Monday</option>
+                                                                                </select>
                                                                         </div>
                                                                         <div class="col-sm-3 mb-3">
                                                                             <label for="week_off"
@@ -886,7 +888,7 @@
         </div>
     </div>
     <!-- latest jquery-->
-    <script src="../assets/js/jquery-3.5.1.min.js"></script>
+    <!-- <script src="../assets/js/jquery-3.5.1.min.js"></script> -->
     <!-- feather icon js-->
     <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
     <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
@@ -921,123 +923,14 @@
     <script src="../assets/js/theme-customizer/customizer.js"></script>
     <script src="../assets/js/script.js"></script>
     <script>
-        function myFunction() {
-            window.location.href = "editBill.html"
-        }
-        function nextFunction() {
-
-        }
-        function backFunction() {
-
-        }
-        function selectedVendor() {
-            selectElement = document.querySelector('#select1');
-            output = selectElement.value;
-            document.querySelector('.output').textContent = output;
-            if (output === 'Gujarat') {
-                document.querySelector('.number').textContent = '1234567890'
-                document.querySelector('.bankName').textContent = 'XYZ'
-                document.querySelector('.bankBranch').textContent = 'ABC'
-                document.querySelector('.bankIFSC').textContent = 'A123B123C123'
-                document.querySelector('.bankAccount').textContent = '123456789012'
-            }
-            else if (output === 'Vendor B') {
-                document.querySelector('.number').textContent = '0987654321'
-                document.querySelector('.bankName').textContent = 'ABC'
-                document.querySelector('.bankBranch').textContent = 'PQR'
-                document.querySelector('.bankIFSC').textContent = 'B456F123O098'
-                document.querySelector('.bankAccount').textContent = '98765434123'
-            }
-            else {
-                document.querySelector('.number').textContent = '5324342343'
-                document.querySelector('.bankName').textContent = 'DEF'
-                document.querySelector('.bankBranch').textContent = 'ABC'
-                document.querySelector('.bankIFSC').textContent = 'F333R563C163'
-                document.querySelector('.bankAccount').textContent = '578234343136'
-            }
-        }
-        function prefillBatchDetails() {
-            const batchSelect = document.getElementById('batchSelect');
-            const batchStartDate = document.getElementById('batchStartDate');
-            const batchEndDate = document.getElementById('batchEndDate');
-            const courseName = document.getElementById('courseName');
-            const hours = document.getElementById('hours');
-            const milestone1Input = document.getElementById('milestone1Input');
-
-            const batchDetails = {
-                ABC: {
-                    startDate: '2024-06-01',
-                    endDate: '2024-12-01',
-                    courseName: 'Course ABC',
-                    hours: '40',
-                    milestone1: 100
-                },
-                XYZ: {
-                    startDate: '2024-07-01',
-                    endDate: '2024-11-01',
-                    courseName: 'Course XYZ',
-                    hours: '35',
-                    milestone1: 150
-                }
-            };
-
-            const selectedBatch = batchSelect.value;
-
-            if (batchDetails[selectedBatch]) {
-                batchStartDate.value = batchDetails[selectedBatch].startDate;
-                batchEndDate.value = batchDetails[selectedBatch].endDate;
-                courseName.value = batchDetails[selectedBatch].courseName;
-                hours.value = batchDetails[selectedBatch].hours;
-                milestone1Input.value = batchDetails[selectedBatch].milestone1;
-                calculateTotal();
-            }
-        }
-
-        function calculateTotal() {
-            const milestone1 = parseFloat(document.getElementById('milestone1Input').value) || 0;
-            const uniform = parseFloat(document.getElementById('uniformInput').value) || 0;
-            const total = milestone1 + uniform;
-            document.getElementById('totalMilestoneInput').value = total;
-        }
-
-        function nextTab() {
-            const activeTab = document.querySelector('.nav-tabs .nav-link.active');
-            const nextTab = activeTab.parentElement.nextElementSibling;
-
-            if (nextTab) {
-                const nextLink = nextTab.querySelector('.nav-link');
-                const nextPane = document.querySelector(nextLink.getAttribute('href'));
-
-                activeTab.classList.remove('active');
-                nextLink.classList.add('active');
-
-                document.querySelector('.tab-pane.active').classList.remove('show', 'active');
-                nextPane.classList.add('show', 'active');
-            }
-        }
-        function showInfo(sectionId, step) {
-            // Hide all info sections
-            document.querySelectorAll('.info-section').forEach(section => {
-                section.classList.remove('active');
+                $(document).ready(function() {
+            $('#week_off').select2({
+                placeholder: 'Select Week off',
+                width: '100%' // Adjust the width as needed
             });
-            // Show the selected info section
-            document.getElementById(sectionId).classList.add('active');
-
-            // Update the step classes
-            document.querySelectorAll('.u-pearl').forEach(pearl => {
-                const pearlStep = parseInt(pearl.getAttribute('data-step'));
-                if (pearlStep < step) {
-                    pearl.classList.add('done');
-                    pearl.classList.remove('current');
-                } else if (pearlStep === step) {
-                    pearl.classList.add('current');
-                    pearl.classList.remove('done');
-                } else {
-                    pearl.classList.remove('done', 'current');
-                }
-            });
-        }
-
+        });
+        $(".js-example-basic-multiple").select2();
+        
     </script>
     <!-- login js-->
     <!-- Plugin used-->
