--- a/hr_editStaff.html
+++ b/hr_editStaff.html
@@ -47,6 +47,11 @@
     <!-- Responsive css-->
     <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/hr.css">
+    <!--new added-->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    
     <style>
         .attendance-container {
             padding: 20px;
@@ -264,7 +269,6 @@
                                         <li><a href="hr_dashboard.html">Dashboard</a></li>
                                         <li><a href="hr_staff.html">Staff</a></li>
                                         <li><a href="hr_leave.html">Staff Attendance</a></li>
-                                        <li><a href="hr_holiday_template.html">Holiday Template</a></li>
                                         <li><a href="hr_settings.html">Settings</a></li>
                                     </ul>
                                 </li>
@@ -503,18 +507,17 @@
                                                                                 name="salary_cycle" value="1">
                                                                         </div>
                                                                         <div class="col-sm-3 mb-3">
-                                                                            <label for="week_off"
-                                                                                class="form-label">Week Off</label>
-                                                                            <select class="form-select"
-                                                                                id="marital_status"
-                                                                                name="marital_status">
-                                                                                <option disabled selected>Select
-                                                                                    Week off
-                                                                                </option>
-                                                                                <option value="Married">Sunday
-                                                                                </option>
+                                                                            <label class="form-label">Week off</label>
+                                                                            <select class="form-select" id="week_off" name="week_off" multiple>
+                                                                                <option value="Sunday">Sunday</option>
+                                                                                <option value="Saturday">Saturday</option>
+                                                                                <option value="Friday">Friday</option>
+                                                                                <option value="Thursday">Thursday</option>
+                                                                                <option value="Wednesday">Wednesday</option>
+                                                                                <option value="Tuesday">Tuesday</option>
+                                                                                <option value="Monday">Monday</option>
                                                                             </select>
-                                                                        </div>
+                                                                    </div>
                                                                         <div class="col-sm-3 mb-3">
                                                                             <label for="week_off"
                                                                                 class="form-label">Holiday
@@ -950,7 +953,6 @@
         </div>
     </div>
     <!-- latest jquery-->
-    <script src="../assets/js/jquery-3.5.1.min.js"></script>
     <!-- feather icon js-->
     <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
     <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
@@ -985,6 +987,13 @@
     <script src="../assets/js/theme-customizer/customizer.js"></script>
     <script src="../assets/js/script.js"></script>
     <script>
+          $(document).ready(function() {
+            $('#week_off').select2({
+                placeholder: 'Select Week off',
+                width: '100%' // Adjust the width as needed
+            });
+        });
+        $(".js-example-basic-multiple").select2();
         function myFunction() {
             window.location.href = "editBill.html"
         }
