--- a/hr_settings.html
+++ b/hr_settings.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/hr.css">
     <style>
-        .card-radio {
+    .card-radio {
             cursor: pointer;
         }
 
@@ -217,7 +217,6 @@
                                         <li><a href="hr_dashboard.html">Dashboard</a></li>
                                         <li><a href="hr_staff.html">Staff</a></li>
                                         <li><a href="hr_leave.html">Staff Attendance</a></li>
-                                        <li><a href="hr_holiday_template.html">Holiday Template</a></li>
                                         <li><a href="hr_settings.html">Settings</a></li>
                                     </ul>
                                 </li>
@@ -265,14 +264,14 @@
                                                         </div>
                                                     </div>
                                                 </a>
-                                                <!-- <a class="nav-link" href="hr_holiday_template.html">
+                                                <a class="nav-link" href="hr_holiday_template.html">
                                                     <div class="media">
                                                         <div class="media-body">
                                                             <h6> <span class="first_name_1">Holiday Template</span></h6>
                                                             <p class="email_add_1">create and assign holiday template</p>
                                                         </div>
                                                     </div>
-                                                </a> -->
+                                                </a>
                                                 <a class="nav-link" href="hr_late_entry_rule.html">
                                                     <div class="media">
                                                         <div class="media-body">
@@ -346,9 +345,7 @@
                                                                                 Manual Attendance
                                                                             </label>
                                                                         </div>
-                                                                        <div class="text-muted">Staff can mark their own
-                                                                            attendance with selfie. Location will be
-                                                                            captured automatically</div>
+                                                                        <div class="text-muted">Attendance is neutral by default, should be marked manually</div>
                                                                     </div>
                                                                     <div class="border-bottom mt-2 mb-2"></div>
 
@@ -382,8 +379,6 @@
                                                                             attendance with selfie. Location will be
                                                                             captured automatically</div>
                                                                     </div>
-                                                                    <div class="border-bottom mt-2 mb-2"></div>
-
                                                                 </div>
                                                             </form>
                                                         </div>
@@ -410,14 +405,66 @@
                                                             <button class="btn-close" type="button"
                                                                 data-bs-dismiss="modal" aria-label="Close"></button>
                                                         </div>
+                                                        
                                                         <div class="modal-body">
-                                                            <h6>How do you Calculate Monthly Salary</h6>
-                                                            <form id="monthCalcForm">
+                                                            <h6 class="mb-4 text-muted f-w-600">How do you Calculate Monthly Salary</h6>
+                                                            <form>
                                                                 <div class="form-group">
-                                                                    <label class="card-radio project-box">
+                                                                    <div
+                                                                        class="form-check justify-content-between mt-2">
+                                                                        <div>
+                                                                            <input class="form-check-input" type="radio"
+                                                                                name="leaveOption" id="weeklyOff"
+                                                                                value="weeklyOff">
+                                                                            <label class="form-check-label"
+                                                                                for="weeklyOff">
+                                                                                Calender Month
+                                                                            </label>
+                                                                        </div>
+                                                                        <div class="text-muted">
+                                                                            Ex: March - 31 days, April
+                                                                            - 30 Days etc (Per day salary = Salary/No.
+                                                                            of days in month)                                                                        </div>
+                                                                    </div>
+                                                                    <div class="border-bottom mt-2 mb-2"></div>
+
+                                                                    <div
+                                                                        class="form-check justify-content-between mt-2">
+                                                                        <div>
+                                                                            <input class="form-check-input" type="radio"
+                                                                                name="leaveOption" id="compOffLeave"
+                                                                                value="compOffLeave">
+                                                                            <label class="form-check-label"
+                                                                                for="compOffLeave">
+                                                                                Every Month 30 Days
+                                                                            </label>
+                                                                        </div>
+                                                                        <div class="text-muted">Ex: March - 31 days, April
+                                                                            - 30 Days etc (Per day salary = Salary/30)</div>
+                                                                    </div>
+                                                                    <div class="border-bottom mt-2 mb-2"></div>
+                                                                    <div
+                                                                        class="form-check justify-content-between mt-2">
+                                                                        <div>
+                                                                            <input class="form-check-input" type="radio"
+                                                                                name="leaveOption" id="other"
+                                                                                value="other">
+                                                                            <label class="form-check-label" for="other">
+                                                                                Exclude Weekly Offs
+                                                                            </label>
+                                                                        </div>
+                                                                        <div class="text-muted">Ex: Month with 31 days and
+                                                                            4 weekly-offs will have 27 payable days (Per
+                                                                            day salary = Salary/Payable Days)</div>
+                                                                    </div>
+                                                                </div>
+                                                            </form>
+                                                            <!-- <form id="monthCalcForm">
+                                                                <div class="form-group">
+                                                                    <label class="card-radio project-box pricing-block">
                                                                         <input type="radio" name="monthCalculation"
                                                                             id="calendarMonth" value="calendarMonth">
-                                                                        <h5 class="card-title">Calendar Month</h5>
+                                                                        <h6 class="">Calendar Month</h6>
                                                                         <p class="text-muted">Ex: March - 31 days, April
                                                                             - 30 Days etc (Per day salary = Salary/No.
                                                                             of days in month)</p>
@@ -440,7 +487,7 @@
                                                                             day salary = Salary/Payable Days)</p>
                                                                     </label>
                                                                 </div>
-                                                            </form>
+                                                            </form> -->
                                                         </div>
                                                         <div class="modal-footer">
                                                             <div class="d-flex justify-content-end">
