--- a/hr_edit_leave_template.html
+++ b/hr_edit_leave_template.html
@@ -314,7 +314,7 @@
                             </div>
                             <div>
                                 <div class="template-settings">
-                                    <p class="fs-6 text-secondary">Leave Categories</p>
+                                    <p class="fs-6 text-secondary">Template Setting</p>
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="">
